<?xml version="1.0" encoding="utf-8"?>
<resources>

    <color name="color_main_bk">#eeeeee</color>
    <color name="orange_color">#FF6600</color>
    <color name="green_color">#00A000</color>
    <color name="gray_color">#4F4F4F</color>
    <color name="white_color">#FFFFFF</color>
    <color name="Tgray_color">#404040</color>
    <color name="transparent">#b3000000</color>
    <!-- <color name="btn">#1DF5F8</color> -->
    <color name="btn">#9C55A0</color>

    <string-array name="inlet_presure_arrays"></string-array>
    <string-array name="Application_arrays1"></string-array>
    <string-array name="inlet_temperature_arrays"></string-array>
    <string-array name="Outlet_temperature_arrays"></string-array>
    <string-array name="Application_arrays"></string-array>
    <string-array name="Application_Heating_arrays"></string-array>
    <string-array name="Application_Tracing_arrays"></string-array>
    <string-array name="Application_Rotating_Equipment_arrays"></string-array>
    <string-array name="Type_arrays"></string-array>
    <string-array name="Type_Thermostatic_arrays"></string-array>
    <string-array name="Type_Mechanical_arrays"></string-array>
    <string-array name="Type_Thermo_Dynamic_arrays"></string-array>
    <string-array name="Posittion_arrays"></string-array>
    <string-array name="Connection_arrays"></string-array>
    <string-array name="Size_arrays"></string-array>
    <string-array name="Ancillary_Equipment_arrays"></string-array>
    <string-array name="Company_arrays"></string-array>

    <string name="app_name">کیوان تجارت والا</string>
    <string name="hello_world">انتخاب فابل</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_main_menu">MainMenu</string>
    <string name="title_activity_register">Register</string>
    <string name="title_activity_help">Help</string>
    <string name="title_activity_slector">Slector</string>
    <string name="title_activity_setting">Setting</string>
    <string name="title_activity_transfer_server">Transfer Server</string>
    <string name="title_activity_about_me">About Me</string>
    <string name="lbl_main_menu">منوی اصلی</string>
    <string name="lbl_exit">خروج</string>
    <string name="lbl_register">فرم ثبت</string>
    <string name="lbl_attachment">پیوست</string>
    <string name="lbl_help">راهنما</string>
    <string name="lbl_about">درباره ما</string>
    <string name="lbl_excel_export">خروجی اکسل</string>
    <string name="lbl_transfer_server">انتقال به سرور</string>
    <string name="lbl_setting">تنظیمات</string>
    <string name="inlet_pressure">Inlet pressure</string>
    <string name="Inlet_temprature">Inlet temprature</string>
    <string name="Outlet_pressure">tempreture</string>
    <string name="Application">Application</string>
    <string name="Type">Type</string>
    <string name="Position">Position</string>
    <string name="Connection">Connection</string>
    <string name="Size">Size</string>
    <string name="Ancillary_Equipment">Ancillary Equipment</string>
    <string name="Company">Company</string>
    <string name="Other">Nots</string>
    <string name="Attachment">Attachment</string>
    <string name="sreturn">بازگشت</string>
    <string name="remove_info">حذف اطلاعات</string>
    <string name="save_info">ذخیره اطلاعات</string>
    <string name="outlet_pressure">Outlet pressure</string>
    <string name="ok">تایید</string>
    <string name="exportTitle">خروجی به اکسل</string>
    <string name="exportAlarm">توجه!!</string>
    <string name="exportNote">نام و محل فایل مورد نظر را انتخاب کنید</string>
    <string name="Cancellation">لغو</string>
    <string name="Delete">حذف</string>
    <string name="addTitle">الصاق فایل</string>
    <string name="deleteTitle">حذف فایل</string>
    <string name="title_activity_attachment">Attachment</string>
    <string name="title_activity_other">Other</string>
    <string name="title_activity_type_selector">TypeSelector</string>
    <string name="cleared_form">اطلاعات فرم پاک شد</string>
    <string name="save">ذخیره</string>
    <string name="is_saved">ذخیره شد</string>
    <string name="Do_you_saving">آیا اطلاعات فرم ذخیره شود؟</string>
    <string name="yes">بله</string>
    <string name="no">خیر</string>
    <string name="plz_complete_frm">لطفا اطلاعات فرم را کامل کنید</string>
    <string name="insert">اضافه</string>
    <string name="Do_you_clear">آیا اطلاعات پاک شود؟</string>
    <string name="title_activity_description">Description</string>
	<string name="done">عملیات انجام شد</string>
    <string name="not_find_file">مشکل در خواندن فایل</string>
	
</resources>
