<AbsoluteLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bk"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".Register" >

    <TextView
        android:id="@+id/lbl_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_x="98dp"
        android:layout_y="2dp"
        android:text="@string/lbl_register"
        android:textAppearance="?android:attr/textAppearanceLarge" 
        android:textColor="@color/white_color"/>

    <TextView
        android:id="@+id/lbl_Inlet_pressure"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_x="17dp"
        android:layout_y="50dp"
        android:text="@string/inlet_pressure"
        android:textColor="@color/white_color" />

    <TextView
        android:id="@+id/lbl_Inlet_temprature"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_x="17dp"
        android:layout_y="86dp"
        android:text="@string/Inlet_temprature"
        android:textColor="@color/white_color" />

    <TextView
        android:id="@+id/lbl_Outlet_pressure"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_x="17dp"
        android:layout_y="111dp"
        android:text="@string/outlet_pressure" 
        android:textColor="@color/white_color"/>

    <TextView
        android:id="@+id/lbl_Application"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_x="18dp"
        android:layout_y="143dp"
        android:text="@string/Application" 
        android:textColor="@color/white_color"/>

    <TextView
        android:id="@+id/lbl_Type"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_x="20dp"
        android:layout_y="171dp"
        android:text="@string/Type" 
        android:textColor="@color/white_color"/>

    <TextView
        android:id="@+id/lbl_Position"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_x="26dp"
        android:layout_y="194dp"
        android:text="@string/Position"
        android:textColor="@color/white_color" />

    <TextView
        android:id="@+id/lbl_Connection"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_x="22dp"
        android:layout_y="220dp"
        android:text="@string/Connection"
        android:textColor="@color/white_color" />

    <TextView
        android:id="@+id/lbl_Size"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_x="30dp"
        android:layout_y="253dp"
        android:text="@string/Size"
        android:textColor="@color/white_color" />

    <TextView
        android:id="@+id/lbl_Ancillary_Equipment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_x="22dp"
        android:layout_y="280dp"
        android:text="@string/Ancillary_Equipment" 
        android:textColor="@color/white_color"/>

    <TextView
        android:id="@+id/lbl_Company"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_x="26dp"
        android:layout_y="307dp"
        android:text="@string/Company"
        android:textColor="@color/white_color" />

    <TextView
        android:id="@+id/lbl_Other"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_x="28dp"
        android:layout_y="342dp"
        android:text="@string/Other" 
        android:textColor="@color/white_color"/>

    <TextView
        android:id="@+id/lbl_Attachment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_x="26dp"
        android:layout_y="368dp"
        android:text="@string/Attachment" 
        android:textColor="@color/white_color"/>

    <EditText
        android:id="@+id/txt_Inlet_pressure"
        android:layout_width="122dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:textColor="@color/white_color" />

    <EditText
        android:id="@+id/txt_Inlet_temprature"
        android:layout_width="122dp"
        android:layout_height="wrap_content"
        android:layout_x="138dp"
        android:layout_y="94dp"
        android:ems="10" 
        android:textColor="@color/white_color"/>

    <EditText
        android:id="@+id/txt_Outlet_pressure"
        android:layout_width="122dp"
        android:layout_height="wrap_content"
        android:layout_x="147dp"
        android:layout_y="142dp"
        android:ems="10"
        android:textColor="@color/white_color" />

    <Spinner
        android:id="@+id/spi_Inlet_temprature"
        android:layout_width="74dp"
        android:layout_height="51dp"
        android:layout_x="246dp"
        android:layout_y="42dp"
        android:background="@android:drawable/btn_dropdown"
        android:entries="@array/inlet_temperature_arrays"
        android:spinnerMode="dropdown" />

    <Spinner
        android:id="@+id/spi_Inlet_pressure"
        android:layout_width="134dp"
        android:layout_height="46dp"
        android:layout_x="0dp"
        android:layout_y="0dp"
        android:background="@android:drawable/btn_dropdown"
        android:entries="@array/inlet_presure_arrays"
        android:spinnerMode="dropdown" />

    <Spinner
        android:id="@+id/spi_Outlet_pressure"
        android:layout_width="134dp"
        android:layout_height="46dp"
        android:layout_x="184dp"
        android:layout_y="186dp"
        android:background="@android:drawable/btn_dropdown"
        android:entries="@array/Outlet_temperature_arrays"
        android:spinnerMode="dropdown" />
    
        <Spinner
        android:id="@+id/spi_Ancillary_Equipment"
        android:layout_width="134dp"
        android:layout_height="46dp"
        android:layout_x="184dp"
        android:layout_y="186dp"
        android:background="@android:drawable/btn_dropdown"
        android:spinnerMode="dropdown" />

    <Spinner
        android:id="@+id/spi_Application"
        android:layout_width="134dp"
        android:layout_height="46dp"
        android:layout_x="42dp"
        android:layout_y="187dp"
        android:background="@android:drawable/btn_dropdown"
        android:entries="@array/Application_arrays"
        android:spinnerMode="dropdown" />

    <Spinner
        android:id="@+id/spi_Type"
        android:layout_width="134dp"
        android:layout_height="46dp"
        android:layout_x="46dp"
        android:layout_y="232dp"
        android:background="@android:drawable/btn_dropdown"
        android:spinnerMode="dropdown" />

    <Spinner
        android:id="@+id/spi_Position"
        android:layout_width="134dp"
        android:layout_height="46dp"
        android:layout_x="189dp"
        android:layout_y="238dp"
        android:background="@android:drawable/btn_dropdown"
        android:entries="@array/Posittion_arrays"
        android:spinnerMode="dropdown" />

    <Button
        android:id="@+id/btn_save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_x="217dp"
        android:layout_y="398dp"
        android:text="@string/save_info"
        android:background="@color/btn"
        android:textColor="@color/white_color" />

    <Button
        android:id="@+id/btn_return"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_x="14dp"
        android:layout_y="400dp"
        android:text="@string/sreturn"
        android:background="@color/btn"
        android:textColor="@color/white_color" />

    <Button
        android:id="@+id/btn_clear"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_x="128dp"
        android:layout_y="343dp"
        android:text="@string/remove_info" 
        android:background="@color/btn"
        android:textColor="@color/white_color"/>

   <Spinner
       android:id="@+id/spi_Connection"
        android:layout_width="134dp"
        android:layout_height="46dp"
        android:layout_x="107dp"
        android:layout_y="54dp"
        android:background="@android:drawable/btn_dropdown"
        android:entries="@array/Connection_arrays"
        android:spinnerMode="dropdown" />


	<Spinner
       android:id="@+id/spi_Application1"
        android:layout_width="134dp"
        android:layout_height="46dp"
        android:layout_x="107dp"
        android:layout_y="54dp"
        android:background="@android:drawable/btn_dropdown"
        android:entries="@array/Application_arrays1"
        android:spinnerMode="dropdown" />

    <Spinner
        android:id="@+id/spi_Size"
        android:layout_width="134dp"
        android:layout_height="46dp"
        android:layout_x="178dp"
        android:layout_y="124dp"
        android:background="@android:drawable/btn_dropdown"
        android:entries="@array/Size_arrays"
        android:spinnerMode="dropdown" />
    <Spinner
        android:id="@+id/spi_Size1"
        android:layout_width="134dp"
        android:layout_height="46dp"
        android:layout_x="178dp"
        android:layout_y="124dp"
        android:background="@android:drawable/btn_dropdown"
        android:entries="@array/Size_arrays"
        android:spinnerMode="dropdown" />

    <!-- <Spinner
        android:id="@+id/spi_Ancillary_Equipment"
        android:layout_width="134dp"
        android:layout_height="46dp"
        android:layout_x="178dp"
        android:layout_y="124dp"
        android:background="@android:drawable/btn_dropdown"
        android:entries="@array/Ancillary_Equipment_arrays"
        android:spinnerMode="dropdown" /> 
        -->

    <Spinner
        android:id="@+id/spi_Company"
        android:layout_width="134dp"
        android:layout_height="46dp"
        android:layout_x="178dp"
        android:layout_y="124dp"
        android:background="@android:drawable/btn_dropdown"
        android:entries="@array/Company_arrays"
        android:spinnerMode="dropdown" />

    <Button
        android:id="@+id/btn_Attachment"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_x="149dp"
        android:layout_y="288dp"
        android:text="+" 
        android:background="@color/btn"
        android:textColor="@color/white_color"/>
    
    <TextView
        android:id="@+id/txt_attachment_files"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_x="98dp"
        android:layout_y="2dp"
        android:text=""
        android:textAppearance="?android:attr/textAppearanceLarge" 
        android:textColor="@color/white_color"/>

    <EditText
        android:id="@+id/txt_Other"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_x="190dp"
        android:layout_y="286dp"
        android:ems="10"
        android:inputType="textImeMultiLine" 
        android:textColor="@color/white_color">

        <requestFocus />
    </EditText>



</AbsoluteLayout>