<AbsoluteLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bk"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".Attachment" >

    <TextView
        android:id="@+id/lbl_Attachment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_x="98dp"
        android:layout_y="2dp"
        android:text="@string/lbl_attachment"
        android:textAppearance="?android:attr/textAppearanceLarge" 
        android:textColor="@color/white_color"/>
    <Button
        android:id="@+id/btn_Attachment"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_x="149dp"
        android:layout_y="288dp"
        android:text="@string/insert" 
        android:background="@color/btn"
        android:textColor="@color/white_color"/>
    <Button
        android:id="@+id/btn_clear"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_x="149dp"
        android:layout_y="288dp"
        android:text="@string/remove_info" 
        android:background="@color/btn"
        android:textColor="@color/white_color"/>
     <TextView
        android:id="@+id/lst_Attachments"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_x="98dp"
        android:layout_y="2dp"
        android:text=""
        android:textAppearance="?android:attr/textAppearanceLarge" 
        android:textColor="@color/white_color"/>
    
      <Button
        android:id="@+id/btn_return"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_x="14dp"
        android:layout_y="400dp"
        android:text="@string/sreturn"
        android:background="@color/btn"
        android:textColor="@color/white_color" />
    
</AbsoluteLayout>
